# restio

./: README.md
.github/workflows/: fastapi.yml  go.yml  node.yml
ai/: .env.example  README.md  allegro.py  api.py  aria.py  format.py  model.py  pyproject.toml  utils.py
backend/: .env.example  .gitignore  README.md  go.mod  go.sum
backend/cmd/server/: main.go
backend/internal/auth/: jwt.go  middleware.go
backend/internal/config/: config.go
backend/internal/controllers/: agents_controller.go  auth_controller.go  sync_controller.go  sync_feedback_controller.go
backend/internal/models/: ai_summary.go  sync_data.go  sync_description.go  sync_feedback.go  sync_status.go  user.go
backend/internal/repositories/: ai_summary_repository.go  sync_description_repository.go  sync_feedback_repository.go  sync_repository.go  user_repository.go
backend/internal/routes/: routes.go
backend/internal/services/: agents_service.go  ai_summary_service.go  auth_service.go  email_service.go  sync_description_service.go  sync_feedback_service.go  sync_service.go
backend/internal/utils/: logger.go  response.go
backend/internal/workers/: send_email_verification.go
frontend/: .env.example  README.md  package-lock.json  package.json
frontend/app/: Providar.js  layout.js  page.js
frontend/app/MoodTracker/: page.jsx
frontend/app/components/: CBTExercises.jsx  MindfulnessExercises.jsx  MoodTracker.jsx  PersonalizedPlan.jsx  TherapistConnect.jsx
frontend/app/login/: page.jsx
frontend/lib/: moddata.js
frontend/store/: ChatSlice.js
frontend/utils/: auth.jsx
(+16 files in other folders)
